<resources>
    <string name="app_name">Mobiilisovellus</string>
    <string name="LisaOsat"><u>Lisäosat</u></string>
    <string name="HakuLO"><u>Hae nimellä:</u></string>
    <string name="jarjesteleLO"><u>Järjestele:</u></string>
    <string name="oppaat_teksti">testiValue</string>
    <string-array name="Lisaosa_Jarjestely_Palkki">
        <item>Kallein ensin</item>
        <item>Halvin ensin</item>
    </string-array>
    <string name="app_name0">MobileManager</string>
    <string name="oppaat_teksti0"><u>Oppaat / e-kirjat</u></string>
    <string name="gridi11"><u>1,1</u></string>
    <string name="gridi12">1,2</string>
    <string name="gridi13">1,3</string>
    <string name="gridi21">2,1</string>
    <string name="gridi22">2,1</string>
    <string name="gridi23">2,1</string>
    <string name="gridi31">2,1</string>
    <string name="gridi32">2,1</string>
    <string name="gridi33">2,1</string>


        </resources>






