<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="412dp"
        android:layout_height="61dp"
        android:background="#81AF4C"
        android:gravity="center"
        android:text="@string/oppaat_teksti"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lineHeight="50dp" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="409dp"
        android:layout_height="400dp"
        app:columnCount="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:rowCount="2"
        tools:ignore="ExtraText">






    </androidx.gridlayout.widget.GridLayout>
    <TextView
        android:text="@string/gridi11"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        app:layout_gravity="fill" />

    <TextView
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="0sp"
        android:text="@string/gridi12"
        android:textSize="38sp"
        app:layout_columnWeight="1"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:text="@string/gridi13"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        app:layout_gravity="fill" />
    <TextView
        android:text="@string/gridi21"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        app:layout_gravity="fill" />

    <TextView
        android:text="@string/gridi22"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        app:layout_gravity="fill" />
    <TextView
        android:text="@string/gridi23"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        app:layout_gravity="fill" />
    <TextView
        android:text="@string/gridi31"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        app:layout_gravity="fill" />
    <TextView
        android:text="@string/gridi32"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        app:layout_gravity="fill" />
    <TextView
        android:text="@string/gridi33"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        app:layout_gravity="fill" />

</androidx.constraintlayout.widget.ConstraintLayout>





